--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,9 @@ body {
   background-color: #c35600;
   color: white;
 }
+
+h1 {
+  text-align: center;
+  margin-top: 4rem;
+  text-transform: capitalize;
+}
